Refactor code scanner configuration and improve signal handling
- Updated configuration files for iOS/macOS, Java, JavaScript, and Python to emphasize human-focused checks and streamline backend setup.
- Enhanced memory management, concurrency, architectural, and security checks across various languages.
- Refactored signal handling in the scanner to replace restart signals with refresh signals, allowing for more efficient processing of file changes.
- Adjusted tests to reflect changes in signal handling and ensure proper functionality of the scanner's refresh mechanism.

--- a/config.toml
+++ b/config.toml
@@ -6,7 +6,7 @@
 # C++/Qt specific checks
 [[checks]]
 pattern = "*.cpp, *.h, *.cxx, *.hpp"
-rules = [
+checks = [
     "Check for any detectable errors and suggest code simplifications where possible.",
     "Check that iteration continues automatically until the final result, without requiring user prompts to proceed.",
     "Check that constexpr and compile-time programming techniques are applied where appropriate.",
@@ -20,7 +20,7 @@ rules = [
 # General checks for all files
 [[checks]]
 pattern = "*"
-rules = [
+checks = [
     "Check for unused files or dead code.",
 ]
 
